# c_snake

./: CMakeLists.txt  readme.md
include/: rendering.h  util.h  vector2.h
src/: main.c  rendering.c  util.c
